--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -109,7 +109,8 @@ p {
 }
 
 .experience-unit {
-	margin: 2em 1em 3em 1em;
+	margin: 2em 0 3em 0;
+	padding: 0 2em 0 2em;
 }
 
 .experience-unit p {
