--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -130,22 +130,20 @@
       </div>       
       <h3>Work</h3> 
       <br />
-      <br /> 
   </div>     
 </section>  
- <div class="clr"></div>
+<div class="clr"></div>
 
-<section id="gallery col xs-12">
-  
+<section id="work col xs-12">
   <div class="container-fluid">
 
     <div class="experience-unit col-xs-12">
       <div class="col-xs-12 col-sm-5 firehose-look">
-        <p>aca pongo una imagen</p>
+        <p>Aca pongo una imagen</p>
       </div>  
       <div class="col-xs-12 col-sm-7 firehose-tell">
         <p>Completed Bootcamp Firehose Project it was a wonderful experince that open my eyes to the world of web development. Ruby on rails database driven apps are my main focus. I'm learning all the things I can get my hands on.<p>
-        <%= link_to 'Whole story', '#', :class => 'btn-2 btn-default btn-lg pull-left' %>
+        <%= link_to 'Whole story', '#', :class => 'btn-2 btn-default btn-lg' %>
       </div>
     </div>
 
@@ -155,7 +153,7 @@
         <%= link_to 'Whole Story', '#', :class => 'btn-2 btn-default btn-lg' %>
       </div>  
       <div class="col-xs-12 col-sm-5 lady-look">
-        <p>aca pongo una imagen</p>
+        <p>Aca pongo una imagen</p>
       </div>
     </div>  
 
@@ -179,7 +177,7 @@
     <div class="foto col-xs-12 col-sm-5 col-sm-offset-1">
       <span>Feel free to <b>ASK ME</b> any question about freelancing your project.
       <br />
-      Located in: Montreal Metro Area, Quebec
+      Located in: Montreal, Quebec
       <br />
       <b>Find me:</b>
       <br /></span>
