--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -96,6 +96,7 @@ p {
 
 .about-me {
 	padding: 2em 1em 1em 1em;
+	text-align: justify;
 }
 
 .skill-unit {
@@ -133,9 +134,9 @@ p {
 #footer {
 	height:auto;
 	color:white;
-	background-color: rgba(36,32,33,0.9);
-	padding-top: 20px;
-	padding-bottom: 20px;
+	background-color: rgba(36,32,33,0.8);
+	padding-top: 1.5em;
+	padding-bottom: 1.5em;
 	font-weight:100;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -145,7 +146,7 @@ p {
 }
 
 .esquina {
-	padding: 1em 1em 1em 1em;
+	padding: 1em 0 1em 0;
 }
 
 .esquina span {
@@ -153,7 +154,7 @@ p {
 }
 
 .foto {
-	padding: 1em 1em 1em 1em;
+	padding: 1em 0 1em 0;
 }
 
 .foto span {
