--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Portf</title>
+  <title>Portfoilo Seb</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -138,21 +139,21 @@
   <div class="container-fluid">
 
     <div class="experience-unit col-xs-12">
-      <div class="col-xs-12 col-sm-5 firehose-look">
+      <div class="col-xs-12 col-sm-4 firehose-look">
         <p>Aca pongo una imagen</p>
       </div>  
-      <div class="col-xs-12 col-sm-7 firehose-tell">
+      <div class="col-xs-12 col-sm-8 firehose-tell">
         <p>Completed Bootcamp Firehose Project it was a wonderful experince that open my eyes to the world of web development. Ruby on rails database driven apps are my main focus. I'm learning all the things I can get my hands on.<p>
         <%= link_to 'Whole story', '#', :class => 'btn-2 btn-default btn-lg' %>
       </div>
     </div>
 
     <div class="experience-unit col-xs-12">
-      <div class="col-xs-12 col-sm-7 lady-tell">
+      <div class="col-xs-12 col-sm-8 lady-tell">
         <p>Lady vudu, is a music band from the underbelly, I helped them deveolp a presence on the grid, a responsive website with large graphical content pushed higher by the artisitic abilities of the band</p>
         <%= link_to 'Whole Story', '#', :class => 'btn-2 btn-default btn-lg' %>
       </div>  
-      <div class="col-xs-12 col-sm-5 lady-look">
+      <div class="col-xs-12 col-sm-4 lady-look">
         <p>Aca pongo una imagen</p>
       </div>
     </div>  
@@ -161,7 +162,7 @@
 </section>
   
 
-  <%= yield %>
+<%= yield %>
   <!--footer starts here -->
 <div class="clr"></div>
 <br />
@@ -170,7 +171,7 @@
  <div class="container"> 
     <div class="esquina col-xs-12 col-sm-6">
       <span>Seb -  Web Developer</span><br />
-      <span>I like technology and things that help us have a simpler life.</span>
+      <span>I like technology and things that help us live a simpler life.</span>
       <br />
       <span>E-mail: coustum@mail.com</span>       
     </div>  
