--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -192,7 +192,9 @@
       <b>Find me:</b>
       <br /></span>
       <%= image_tag 'github.png', :class => 'social-button' %>
-      <%= image_tag 'gmail.png', :class => 'social-button' %>    
+      <%= image_tag 'gmail.png', :class => 'social-button' %>
+      <%= image_tag 'facebook.png', class: 'social-button' %>
+      <%= image_tag 'twitter.png', class: 'social-button' %>   
   </div>   
 </div> 
   
