--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -6,7 +6,7 @@ html, body {
 	-o-background-size: cover;
   background-size: cover;
   height: 100%;
-  font-family: "Courier New", Courier, monospace
+  font-family: "Courier New", Courier, monospace;
 }
 
 header {
