--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -159,7 +159,7 @@
 
     <div class="experience-unit col-xs-12">
       <div class="col-xs-12 col-sm-8 lady-tell">
-        <p>Lady vudu, is a rock band from the underbelly of Medellin Streets, I helped them deploy their ideas on the grid we put together a project to promote their career, we built a responsive website pushed higher awesome graphic abilities of the band.</p>
+        <p>Lady vudu, is a rock band from the underbelly of Medellin Streets, I helped them deploy their ideas on the grid, together we put a project to promote their career, we built an amazing responsive website which was pushed higher by the awesome graphic design abilities of the band.</p>
         <%= link_to 'Whole Story', '#', :class => 'btn-2 btn-default btn-lg' %>
       </div>  
       <div class="col-xs-12 col-sm-4 lady-look">
@@ -179,7 +179,7 @@
 <div id="footer">
  <div class="container"> 
     <div class="esquina col-xs-12 col-sm-6">
-      <span>Seb -  Web Developer</span><br />
+      <span>Seb - Web Developer</span><br />
       <span>I like technology and things that help us live a simpler life.</span>
       <br />
       <span>E-mail: tonomudo@gmail.com</span>       
@@ -194,7 +194,9 @@
       <%= link_to 'https://github.com/sebtn' do %>
         <%= image_tag 'github.png', :class => 'social-button' %>
       <% end %>  
-      <%= image_tag 'gmail.png', :class => 'social-button' %>
+      <%= link_to 'mailto:tonomudo@gmail.com' do %>
+        <%= image_tag 'gmail.png', :class => 'social-button' %>
+      <% end %>
       <%= image_tag 'facebook.png', :class => 'social-button' %>
        
   </div>   
